--- a/ajudaaquiv6/cadastroCliente.html
+++ b/ajudaaquiv6/cadastroCliente.html
@@ -54,7 +54,7 @@
 						<input placeholder="Nascimento" class="form-control" name="nascimento" type="text" onfocus="(this.type='date')">
 					</div>
 					<div class="form-group col-xs-6">
-						<input placeholder="CPF" class="form-control" name="cpf" type="text" ">
+						<input placeholder="CPF" id="cpf" class="form-control" name="cpf" type="text" ">
 					</div>
 					<div class="form-group col-xs-6">
 						<input id="rg" type="text" class="form-control" name="rg" placeholder="RG">
@@ -72,14 +72,15 @@
 						<input id="telefone" type="text" class="form-control" name="telefone" placeholder="Telefone">
 					</div>
 					<div class="form-group col-xs-12">
-						<select name="tipo" id="tipo">
+						<select name="tipo" class="form-control" id="tipo">
+							<option value="" disabled hidden selected>Tipo de Deficiência</option>
 							<option value="nao">Não Possuo Nenhuma Deficiência</option>
 							<option value="fisico">Tenho Deficiência Física</option>
 							<option value="mental">Tenho Deficiência Mental</option> <!-- kkkk -->
 						</select>
 					</div>
 						<label for="termos" class="text-left col-xs-12">
-							<input type="checkbox" id="termos"> Aceito os <a class="cor" href="#">Termos de uso</a>
+							<input type="checkbox" name="termos" id="termos"> Aceito os <a class="cor" href="#">Termos de uso</a>
 						</label>
 						<div class="col-xs-12">	
 							<input type="submit" class="col-xs-12  btn btn-primary btn-default" style="margin-top:20px;" value="Cadastrar-se">
@@ -97,6 +98,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/jquery.mask.js"></script>
 	<script src="js/cadastro.js"></script>
+	<script src="js/jquery.validate.js"></script>
 	<script>
 		$("#cep").mask("99999-999");
 		$("#rg").mask("99.999.999");
@@ -116,6 +118,59 @@
 		// $('#login').on("keyup", function() {
 		// 	requestAjax(formulario);
 		// });
+
+		$("#cadastroCliente").validate({
+			rules: {
+				login: {
+					required: true,
+					minlength: 4
+				},
+				senha: {
+					required: true, 
+					minlength: 3
+				},
+				nome: "required",
+				sobrenome: "required",
+				apelido: "required",
+				email: {
+					required: true,
+					email: true
+				},
+				nascimento: "required",
+				cpf: "required",
+				rg: "required",
+				cep: "required",
+				numero: "required",
+				telefone: "required",
+				tipo: "required",
+				termos: "required"
+			},
+			messages: {
+				login: {
+					required: "Insira um Login",
+					minlength: "Mínimo 4 Caracteres"
+				},
+				senha: {
+					required: "Insira uma Senha",
+					minlength: "Mínimo 3 Caracteres"
+				},
+				nome: "Insira seu Nome",
+				sobrenome: "Insira seu Sobrenome",
+				apelido: "Insira seu Apelido",
+				email: {
+					required: "Insira um Email",
+					email: "Email Inválido"
+				},
+				nascimento: "Insira sua Data de Nascimento",
+				cpf: "Insira seu Cpf",
+				rg: "Insira seu RG",
+				cep: "Insira seu CEP",
+				numero: "Insira seu Número",
+				telefone: "Insira um Telefone",
+				tipo: "Selecione sua Deficiência",
+				termos: "Aceite os Termos De Uso"
+			}
+		});
 	</script>
 
 <!-- /SCRIPTS -->
