--- a/ajudaaquiv6/cadastroCliente.html
+++ b/ajudaaquiv6/cadastroCliente.html
@@ -54,7 +54,7 @@
 						<input placeholder="Nascimento" class="form-control" name="nascimento" type="text" onfocus="(this.type='date')">
 					</div>
 					<div class="form-group col-xs-6">
-						<input placeholder="CPF" id="cpf" class="form-control" name="cpf" type="text" ">
+						<input placeholder="CPF" id="cpf" class="form-control" name="cpf" type="text" >
 					</div>
 					<div class="form-group col-xs-6">
 						<input id="rg" type="text" class="form-control" name="rg" placeholder="RG">
@@ -76,7 +76,7 @@
 							<option value="" disabled hidden selected>Tipo de Deficiência</option>
 							<option value="nao">Não Possuo Nenhuma Deficiência</option>
 							<option value="fisico">Tenho Deficiência Física</option>
-							<option value="mental">Tenho Deficiência Mental</option> <!-- kkkk -->
+							<option value="visual">Tenho Deficiência Visual</option> 
 						</select>
 					</div>
 						<label for="termos" class="text-left col-xs-12">
@@ -123,7 +123,8 @@
 			rules: {
 				login: {
 					required: true,
-					minlength: 4
+					minlength: 4,
+					remote: "BLL/checkLogin.php"
 				},
 				senha: {
 					required: true, 
@@ -134,12 +135,16 @@
 				apelido: "required",
 				email: {
 					required: true,
-					email: true
+					email: true,
+					remote: "BLL/checkEmail.php"
 				},
 				nascimento: "required",
 				cpf: "required",
 				rg: "required",
-				cep: "required",
+				cep:{
+					required: true,
+					remote: "BLL/checkCep.php"
+				},
 				numero: "required",
 				telefone: "required",
 				tipo: "required",
@@ -148,7 +153,8 @@
 			messages: {
 				login: {
 					required: "Insira um Login",
-					minlength: "Mínimo 4 Caracteres"
+					minlength: "Mínimo 4 Caracteres",
+					remote: "Login Já Tomado"
 				},
 				senha: {
 					required: "Insira uma Senha",
@@ -159,12 +165,16 @@
 				apelido: "Insira seu Apelido",
 				email: {
 					required: "Insira um Email",
-					email: "Email Inválido"
+					email: "Email Inválido",
+					remote: "Email Já Tomado"
 				},
 				nascimento: "Insira sua Data de Nascimento",
 				cpf: "Insira seu Cpf",
 				rg: "Insira seu RG",
-				cep: "Insira seu CEP",
+				cep: {
+					required: "Insira seu CEP",
+					remote: "Insira um CEP Válido"
+				},
 				numero: "Insira seu Número",
 				telefone: "Insira um Telefone",
 				tipo: "Selecione sua Deficiência",
