--- a/cadastroCliente.html
+++ b/cadastroCliente.html
@@ -74,9 +74,8 @@
 					<div class="form-group col-xs-12">
 						<select name="tipo" class="form-control" id="tipo">
 							<option value="" disabled hidden selected>Tipo de Deficiência</option>
-							<option value="nao">Não Possuo Nenhuma Deficiência</option>
 							<option value="fisico">Tenho Deficiência Física</option>
-							<option value="visual">Tenho Deficiência Visual</option> 
+							<option value="visual">Tenho Deficiência Visual</option> <!-- COMO ASSIM VC TA MARCANDO ISSO -->
 						</select>
 					</div>
 						<label for="termos" class="text-left col-xs-12">
