cadastrar - se corrigido

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </div>
 				    	    <div>
                                 
-                                <button id="login_register_btn" type="button" class="btn btn-link">Cadastrar-se</button>
+                                <button id="login_register_btn" type="button" class="btn btn-link"><a href="tipoCadastro.html">Cadastrar-se</a></button>
                             </div>
 				        </div>
                     </form>
