--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<div class="row">
 		<div id="home" class="jumbotron text-center">
 		  <h1 class="branco">Procurando por Ajuda?</h1>
-		  <p><a class="btn btn-primary btn-lg" href="cadastroCliente.html" role="button">Cadastre-se</a></p>
+		  <p><a class="btn btn-primary btn-lg" href="TipoCadastro.html" role="button">Cadastre-se</a></p>
 		</div>
 	</div>
 	<div class="row text-center chapa">
@@ -238,7 +238,7 @@
     Quisque mauris augue, molestie tincidunt condimentum vitae, gravida</p>
 		</div>
 		<div class="col-sm-3 col-sm-offset-5 text-center">
-			<a type="button" class="btn btn-lg btn-primary btn-inverse" href="cadastroCliente.html">Cadastre-se Agora</a>
+			<a type="button" class="btn btn-lg btn-primary btn-inverse" href="TipoCadastro.html">Cadastre-se Agora</a>
 			<div class="row btn-lg">
 				<a href="#"><i class="fa cor fa-facebook-square fa-2x social"></i></a>
 	      <a href="#"><i class="fa cor fa-twitter-square fa-2x social"></i></a>
