--- a/tipoCadastro.html
+++ b/tipoCadastro.html
@@ -30,17 +30,19 @@
 			<div class="row">
 			<div class="panel-body">
 				<form action="tipoCadastro.php" id="cadastroCliente" method="post">
-					<div class="form-group has-feedback col-xs-6">
-						<div class="dropdown">
-							<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Selecionar
-							<span class="caret"></span></button>
-							<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-								<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Clínica</a></li>
-								<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Assistente</a></li>
-								<li role="presentation"><a role="menuitem" tabindex="-1" href="cadastroCliente.html">Cliente</a></li>          
-							</ul>
+					
+					
+						<div class="btn-group btn-group-justified" role="group" aria-label="...">
+							<div class="btn-group" role="group">
+								<button type="button" class="btn btn-default"><a href="cadastroClinica.html">Clínica</a></button>
+							</div>
+							<div class="btn-group" role="group">
+								<button type="button" class="btn btn-default"><a href="cadastroAssistente.html">Assistente</a></button>
+							</div>
+							<div class="btn-group" role="group">
+								<button type="button" class="btn btn-default"><a href="cadastroCliente.html">Cliente</a></button>
+							</div>
 						</div>
-					</div>
 
 				</form>
 			</div>
