--- a/cadastroClinica.html
+++ b/cadastroClinica.html
@@ -61,7 +61,7 @@
 					</div>
 					
 						<label for="termos" class="text-left col-xs-12">
-							<input type="checkbox" id="termos"> Aceito os <a class="cor" href="#">Termos de uso</a>
+							<input type="checkbox" name="termos" id="termos"> Aceito os <a class="cor" href="#">Termos de uso</a>
 						</label>
 						<div class="col-xs-12">	
 							<input type="submit" class="col-xs-12  btn btn-primary btn-default" style="margin-top:20px;" value="Cadastrar-se">
