--- a/cadastroAssistente.html
+++ b/cadastroAssistente.html
@@ -66,7 +66,7 @@
 					</div>
 					
 					<div class="form-group col-xs-6">
-						<input id="nmroprof" type="text" class="form-control" name="nmroprof" placeholder="Número de Identifição Profissional">
+						<input id="nmroprof" type="text" class="form-control" name="certificado" placeholder="Número de Identifição Profissional">
 					</div>
 					
 					<div class="form-group col-xs-6">
