--- a/tipoCadastro.html
+++ b/tipoCadastro.html
@@ -12,43 +12,23 @@
   </style>
 </head>
 <body data-spy="scroll" id="cadastro" data-target="#navbar-principal">
-	<nav id="" class="navbar navbar-cadastro navbar-fixed-top navbar-default">
+	<nav id="navbar-principal" class="navbar navbar-static-top navbar-default">
   <div class="container-fluid">
     <div class="text-center">
       <a class="" href="./">
       	<img src="img/logo2.png" alt="logo" height="30px">
       </a>
     </div>
-
   </div>
 </nav>
-<div class="container-fluid" style="margin-top:50px;">
+<div class="container-fluid background-image">
 	<div class="row">
-		<div id="cadastro" class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3 panel panel-default">
-			<h3 class="text-center">Selecione o tipo de cadastro</h3>
-			
-			<div class="row">
-			<div class="panel-body">
-				<form action="tipoCadastro.php" id="cadastroCliente" method="post">
-					
-					
-						<div class="btn-group btn-group-justified" role="group" aria-label="...">
-							<div class="btn-group" role="group">
-								<button type="button" class="btn btn-default"><a href="cadastroClinica.html">Clínica</a></button>
-							</div>
-							<div class="btn-group" role="group">
-								<button type="button" class="btn btn-default"><a href="cadastroAssistente.html">Assistente</a></button>
-							</div>
-							<div class="btn-group" role="group">
-								<button type="button" class="btn btn-default"><a href="cadastroCliente.html">Cliente</a></button>
-							</div>
-						</div>
+		<div id="alguem-le-isso" class="col-xs-offset-8 col-xs-4">
+			<h2 class="text-shadow"><b>Tipo de Cadastro</b></h2>
 
-				</form>
 			</div>
 		</div>
 		</div>
-	</div>
 </div>
 
 
