--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#teste">Quem Somos</a></li>
-        <li><a href="#">Junte-se a Nós</a></li>
+        <li><a href="TipoCadastro.html">Junte-se a Nós</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="cor" role="button" data-toggle="modal" data-target="#login-modal"><span class="glyphicon cor glyphicon-log-in"></span> Login</a></li>
@@ -118,7 +118,8 @@
 					Trabalhe Conosco
 				</h2>
 			</span>	
-		<button type="button" class="btn btn-branco btn-lg">Junte-se A Nós</button>
+			<a class="btn btn-primary btn-lg" href="TipoCadastro.html" role="button">Junte-se A Nós </a>
+		
 	</div>
 </div>
 <div class="container">
