--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					Trabalhe Conosco
 				</h2>
 			</span>	
-			<a class="btn btn-primary btn-lg" href="TipoCadastro.html" role="button">Junte-se A Nós </a>
+			<a class="btn btn-branco btn-lg" href="TipoCadastro.html" role="button">Junte-se A Nós </a>
 		
 	</div>
 </div>
