--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<div class="row">
 		<div id="home" class="jumbotron text-center">
 		  <h1 class="branco">Procurando por Ajuda?</h1>
-		  <p><a class="btn btn-primary btn-lg" href="TipoCadastro.html" role="button">Cadastre-se</a></p>
+		  <p><a class="btn btn-primary btn-lg" href="#teste" role="button">Conheça-Nos</a></p>
 		</div>
 	</div>
 	<div class="row text-center chapa">
