--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </div>
 				    	    <div>
                                 
-                                <button id="login_register_btn" type="button" class="btn btn-link"><a href="tipoCadastro.html">Cadastrar-se</a></button>
+                                <button id="login_register_btn" type="button" class="btn btn-link"><a href="TipoCadastro.html">Cadastrar-se</a></button>
                             </div>
 				        </div>
                     </form>
