--- a/cadastroAssistente.html
+++ b/cadastroAssistente.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Ajuda Aqui! - Home</title>
+  <title>Ajuda Aqui! - Cadastro</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body data-spy="scroll" id="cadastro" data-target="#navbar-principal">
-	<nav id="" class="navbar navbar-cadastro navbar-fixed-top navbar-default">
+<nav id="" class="navbar navbar-cadastro navbar-fixed-top navbar-default">
   <div class="container-fluid">
     <div class="text-center">
       <a class="" href="./">
