--- a/cadastroClinica.html
+++ b/cadastroClinica.html
@@ -48,7 +48,7 @@
 						<input id="cnpj" type="text" class="form-control" name="cnpj" placeholder="CNPJ">
 					</div>
 					<div class="form-group col-xs-6">
-						<input id="telefone" type="Telefone" class="form-control" name="telefone" placeholder="Telefone">
+						<input id="telefone" type="text" class="form-control" name="telefone" placeholder="Telefone">
 					</div>
 					
 						<label for="termos" class="text-left col-xs-12">
