--- a/formularios/teste.html
+++ b/formularios/teste.html
@@ -1,7 +1,7 @@
 
 <h1>My First Google Map</h1>
 
-<div id="map"></div>
+<div id="map" style="width:100%;height:500px"></div>
 
 <script>
 	function initMap() {
