--- a/formularios/pedido.html
+++ b/formularios/pedido.html
@@ -25,26 +25,10 @@
 							<div class="clearfix">&nbsp;</div>
 
 							<div class="clearfix"></div>
-							<script>
-								$('#us3').locationpicker({
-									location: {
-										latitude: -19.93637136851032,
-										longitude: -43.96629785152055
-									},
-									radius: 0,
-									inputBinding: {
-										locationNameInput: $('#us3-address')
-									},
-									enableAutocomplete: true
-								});
-								$('#us6-dialog').on('shown.bs.modal', function () {
-									$('#us3').locationpicker('autosize');
-								});
-							</script>
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-primary col-xs-12">Escolher</button>
+						<button type="button" id="escolher" class="btn btn-primary col-xs-12">Escolher</button>
 					</div>
 				</div>
 				<!-- /.modal-content -->
@@ -54,12 +38,43 @@
 		<!-- /.modal -->
 	</div>
 </div>
-<div class="col-xs-6">
 
+<div class="col-xs-6">
 	<div class="content-box-header">
 		<h4>Escolha o Assistente</h4>
-		</div>
-		<div class="content-box-large box-with-header">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa quasi, placeat soluta veniam deserunt deleniti recusandae, vero tempora rerum omnis ducimus maxime, earum est quaerat amet perferendis labore minima consequuntur.</p>
-		</div>
 	</div>
+	<div class="content-box-large box-with-header">
+		<form>
+			<div class="form-group">
+				<input type="text" name="localizacao" id="localizacao" disabled class="form-control">
+			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa quasi, placeat soluta veniam deserunt deleniti recusandae, vero tempora rerum omnis ducimus maxime, earum est quaerat amet perferendis labore minima consequuntur.</p>
+		</form>
+	</div>
+</div>
+
+<script>
+	$(document).ready(function() {
+		$('#us3').locationpicker({
+			location: {
+				latitude: -19.93637136851032,
+				longitude: -43.96629785152055
+			},
+			radius: 0,
+			inputBinding: {
+				locationNameInput: $('#us3-address')
+			},
+			enableAutocomplete: true
+		});
+		$('#us6-dialog').on('shown.bs.modal', function () {
+			$('#us3').locationpicker('autosize');
+		});
+
+		$("#escolher").on('click', function() {
+			$endereco = $('#us3-address').val();
+			$('#us6-dialog').modal('toggle');
+			$('#localizacao').val($endereco);
+		});
+
+	})
+</script>
