olha ai bernardo 2

--- a/formularios/pedido.html
+++ b/formularios/pedido.html
@@ -1,6 +1,6 @@
-<div class="col-xs-6">
+<div class="col-xs-4">
 	<div class="content-box-header">
-		<h4>Faça Um Pedido</h4>
+		<h4>Escolha Sua Localização</h4>
 	</div>
 	<div class="content-box-large box-with-header">
 		<button data-target="#us6-dialog" data-toggle="modal" class="btn btn-info col-xs-12">Localização</button>
@@ -39,15 +39,16 @@
 	</div>
 </div>
 
-<div class="col-xs-6">
+<div class="col-xs-8">
 	<div class="content-box-header">
-		<h4>Escolha o Assistente</h4>
+		<h4>Faça um Pedido</h4>
 	</div>
 	<div class="content-box-large box-with-header">
 		<form>
 			<div class="form-group">
-				<input type="text" name="localizacao" id="localizacao" disabled class="form-control">
+				<input type="text" placeholder="Localização" name="localizacao" id="localizacao" disabled class="form-control">
 			</div>
+			<p class="lead">Escolha um Assistente</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa quasi, placeat soluta veniam deserunt deleniti recusandae, vero tempora rerum omnis ducimus maxime, earum est quaerat amet perferendis labore minima consequuntur.</p>
 		</form>
 	</div>
