--- a/tipoCadastro.html
+++ b/tipoCadastro.html
@@ -39,7 +39,7 @@
           <option value="cadastroClinica.html">Gerente</option>
         </select>
         <label for="termos">
-          <input type="checkbox" name="termos" class="" id="termos"> Aceito os <a class="cor" href="#">Termos de uso</a>
+          <input type="checkbox" name="termos" class="" id="termos"> Aceito os <a class="cor" href="../Ajuda-Aqui/termos.php">>Termos de uso</a>
         </label>
         <input type="submit" value="Continuar" style="top: 30px;" class="btn col-xs-12 btn-default btn-primary btn-lg">
       </form>
