--- a/tipoCadastro.html
+++ b/tipoCadastro.html
@@ -78,7 +78,7 @@
           minlength: "Senha muito Curta"
         },
         tipo: "Selecione um Tipo de Usuário",
-        termos: "Aceite os Teros De Uso"
+        termos: "Aceite os Termos De Uso"
       },
       submitHandler: function(form) {
         $.get({
