--- a/tipoCadastro.html
+++ b/tipoCadastro.html
@@ -30,7 +30,7 @@
           <input type="text" name="login" id="login" class="form-control round" placeholder="login">
         </div>
         <div class="form-group">
-          <input type="text" name="senha" id="senha" class="form-control round" placeholder="senha">
+          <input type="password" name="senha" id="senha" class="form-control round" placeholder="senha">
         </div>
         <select name="tipo" class="form-control round">
           <option value="Tipo" selected disabled hidden>Tipo</option>
@@ -83,7 +83,7 @@
       submitHandler: function(form) {
         $.get({
           url: "BLL/sessionWrite.php",
-          data: $("form :text").serializeArray(),
+          data: $("form :text, :password").serializeArray(),
           success: function() {
             window.location.replace($("select").val());
           },
