--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ajuda Aqui! - Home</title>
+  <title>Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
@@ -69,7 +69,7 @@
                             </div>
 				    	    <div>
                                 
-                                <button id="login_register_btn" type="button" class="btn btn-link"><a href="TipoCadastro.html">Cadastrar-se</a></button>
+                                <button id="login_register_btn" type="button" class="btn btn-link"><a href="tipoCadastro.html">Cadastrar-se</a></button>
                             </div>
 				        </div>
                     </form>
@@ -123,11 +123,8 @@
 </div>
 <div class="container">
   <div class="row text-center">
-    <h1 class="cor">Nois ajuda dms krl</h1>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-    Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-    dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-    Aliquam in felis sit amet augue.
+    <h1 class="cor">O que fazemos</h1>
+    Nosso projeto surgiu com o intuito de ser tornar referência no mercado em nossa área de atuação. Temos uma equipe qualificada e eficientemente comprometida em superar as expectativas dos nossos clientes. Atuamos com seriedade, transparência e, sobretudo, respeito. Prezamos sempre pela qualidade do atendimento, estando prontos para atender e satisfazer as necessidades dos clientes.
     <br>
   </div>
   <hr>
@@ -136,63 +133,59 @@
 	  	<h2 class="cor">
 	  		Como Funciona
 	  	</h2>
-	  	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  	tempor incididunt ut labore et dolore</p>
+	  	<p class="lead">
+Contamos com uma equipe que está disposta a atender solicitações em um clique: facilitamos o conforto de deficientes visuais simplificando sua locomoção e, logo, sua qualidade de vida, e tudo isso pela Internet! Com poucos toques na tela, deficientes terão auxílio onde quer que estejam 24 horas por dia.</p>
 	  </span>
 	  <div class="col-xs-12 col-sm-4 text-center center-block">
 	  	<h2>
-	  		Conteudo 1
+	  		Conforto
 	  	</h2>
 	  	<p>
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo
+	  		Buscamos o melhor, e não deixamos nunca de dar atenção especial a comodidade e bem-estar dos nossos clientes levando serviço eficiente e totalmente online melhorando cada vez mais a acessibilidade.
 	  	</p>
 	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
 	  	<p class="lead">
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing 
 	  	</p>
 	  </div>
 	  <div class="col-xs-12 col-sm-4 text-center">
 	  	<h2>
-	  		Conteudo 2
+	  		Inovação
 	  	</h2>
 	  	<p>
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo
+	  		Uma das formas mais eficientes de diferenciar nosso produto e buscar melhores espaços no mercado é inovando sempre. Nos empenhamos para trazer mais exclusividades e produtos criativos para nossos clientes.
 	  	</p>
 	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
 	  	<p class="lead">
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing 
+	
 	  	</p>
 	  </div>
 	  <div class="col-xs-12 col-sm-4 text-center">
 	  	<h2>
-	  		Conteudo 3
+	  		Agilidade
 	  	</h2>
 	  	<p>
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo
+	  		
+Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas dispostas a ajudar.
+
 	  	</p>
 	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
 	  	<p class="lead">
-	  		Lorem ipsum dolor sit amet, consectetur adipisicing 
+
 	  	</p>
 	  </div>
   </div>
   <div class="row">
 		<h2 class="cor text-center">
-			Lorem Ipson Dollor Sit Amet
+			Porque a AJUDA AQUI?
 		</h2>
 		<hr>
 		<div class="col-sm-4 col-xs-12">
 			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
-			<p class="lead text-center-xs text-center-md">Lorem ipsum dolor sit </p>
-			<p class="text-center-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			<u><a href="#">Lorem ipsum >></a></u>
+			<p class="lead text-center-xs text-center-md">Nos preocupamos com qualidade de vida</p>
+			<p class="text-center-xs">Não é atoa um suporte 24h por dia! Gostamos de estar próximos dos nossos parceiros e não medimos dedicação para o conforto e comodidade dos clientes independente de onde estão. Contamos com dados móveis, sejam por 2g, 3g, 46 ou Wi-Fi e também com a localização remota por satélite. É só pedir e estaremos a caminho.</p>
+			<u><a href="#">Leia mais>></a></u>
 		</div>
   </div>
   <hr>
@@ -201,14 +194,9 @@
 			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
-			<p class="lead text-center-xs text-center-md">Lorem ipsum dolor sit </p>
-			<p class="text-center-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			<u><a href="#">Lorem ipsum >></a></u>
+			<p class="lead text-center-xs text-center-md">Entendemos a necessidade </p>
+			<p class="text-center-xs">Todos os dias, milhares de deficientes visuais tem dificuldade de se locomover, esperamos chamar a atenção para problemas como a falta de acessibilidade aos deficientes a locais públicos e até sua circulação nas área urbana. Esperamos incentivar cada vez mais pessoas dispostas a ajudar, e, quem sabe, despertar esse sentimento nelas. </p>
+			<u><a href="#">Leia mais</a></u>
 		</div>
   </div>
   <hr>
@@ -217,14 +205,8 @@
 			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
-			<p class="lead text-center-not-lg">Lorem ipsum dolor sit </p>
-			<p class="text-center-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			<u><a href="#">Lorem ipsum >></a></u>
+			<p class="lead text-center-not-lg">Estamos sempre inovando</p>
+			<p class="text-center-xs">Estamos dispostos a melhorar sempre nosso sistema, abrindo espaço futuramente para deficientes além de visuais. Além de sempre nos certificar de um sistema de qualidade e com ótima usabilidade para todos. Sejam eles parceiros ou clientes. Nosso suporte está online e o contato fácil em nossas centrais. Estamos sempre próximos de amigos. </a></u>
 		</div>
   </div>
   <hr>
@@ -234,8 +216,7 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<img src="img/logo.png" height="40px" class="" id="logo-bottom" alt="">
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-    Quisque mauris augue, molestie tincidunt condimentum vitae, gravida</p>
+			<p> Participe do AJUDA AQUI. Seja nossos parceiro na luta pelos direitos de todos!
 		</div>
 		<div class="col-sm-3 col-sm-offset-5 text-center">
 			<a type="button" class="btn btn-lg btn-primary btn-inverse" href="TipoCadastro.html">Cadastre-se Agora</a>
