--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas disposta
   </div>
   <div class="row">
 		<h2 class="cor text-center">
-			Porque AJUDA AQUI?
+			Por que o AJUDA AQUI?
 		</h2>
 		<hr>
 		<div class="col-sm-4 col-xs-12">
