--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 	  	<p>
 	  		Buscamos o melhor, e não deixamos nunca de dar atenção especial a comodidade e bem-estar dos nossos clientes levando serviço eficiente e totalmente online melhorando cada vez mais a acessibilidade.
 	  	</p>
-	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
+	  	<img src="img/conforto.png" alt="" class="img-thumbnail">
 	  	<p class="lead">
 	  	</p>
 	  </div>
@@ -154,7 +154,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 	  	<p>
 	  		Uma das formas mais eficientes de diferenciar nosso produto e buscar melhores espaços no mercado é inovando sempre. Nos empenhamos para trazer mais exclusividades e produtos criativos para nossos clientes.
 	  	</p>
-	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
+	  	<img src="img/inovacao.png" alt="" class="img-thumbnail">
 	  	<p class="lead">
 	
 	  	</p>
@@ -168,7 +168,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas dispostas a ajudar.
 
 	  	</p>
-	  	<img src="img/dummy.jpg" alt="" class="img-thumbnail">
+	  	<img src="img/agilidade.png" alt="" class="img-thumbnail">
 	  	<p class="lead">
 
 	  	</p>
@@ -180,7 +180,7 @@ Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas disposta
 		</h2>
 		<hr>
 		<div class="col-sm-4 col-xs-12">
-			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
+			<img src="img/200 1.png" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
 			<p class="lead text-center-xs text-center-md">Nos preocupamos com qualidade de vida</p>
@@ -191,7 +191,7 @@ Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas disposta
   <hr>
   <div class="row">
   	<div class="col-sm-4 col-xs-12">
-			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
+			<img src="img/200 2.png" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
 			<p class="lead text-center-xs text-center-md">Entendemos a necessidade </p>
@@ -202,7 +202,7 @@ Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas disposta
   <hr>
   <div class="row">
   	<div class="col-sm-4 col-xs-12">
-			<img src="img/dummy200.jpg" alt="" class="img-responsive center-block">
+			<img src="img/200 3.png" alt="" class="img-responsive center-block">
 		</div>
 		<div class="col-sm-8 col-xs-12 text-left-lg">
 			<p class="lead text-center-not-lg">Estamos sempre inovando</p>
