INDEX PRONTO KRL

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 	  	<h2>
 	  		Conforto
 	  	</h2>
-	  	<p>
+	  	<p style="height:100px">
 	  		Buscamos o melhor, e não deixamos nunca de dar atenção especial a comodidade e bem-estar dos nossos clientes levando serviço eficiente e totalmente online melhorando cada vez mais a acessibilidade.
 	  	</p>
 	  	<img src="img/conforto.png" alt="" class="img-thumbnail">
@@ -151,7 +151,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 	  	<h2>
 	  		Inovação
 	  	</h2>
-	  	<p>
+	  	<p style="height:100px">
 	  		Uma das formas mais eficientes de diferenciar nosso produto e buscar melhores espaços no mercado é inovando sempre. Nos empenhamos para trazer mais exclusividades e produtos criativos para nossos clientes.
 	  	</p>
 	  	<img src="img/inovacao.png" alt="" class="img-thumbnail">
@@ -163,7 +163,7 @@ Contamos com uma equipe que está disposta a atender solicitações em um clique
 	  	<h2>
 	  		Agilidade
 	  	</h2>
-	  	<p>
+	  	<p style="height:100px">
 	  		
 Tudo cabe na palma da sua mão: seu celular! Encontre pessoas próximas dispostas a ajudar.
 
