--- a/formularios/cadastroAssistenteassoc.html
+++ b/formularios/cadastroAssistenteassoc.html
@@ -56,6 +56,18 @@
 						<input id="cep" type="text" class="form-control" name="cep" placeholder="CEP">
 					</div>
 					<div class="form-group col-xs-6">
+						<input id="bairro" type="text" class="form-control" style="color: #999" disabled="" name="bairro" placeholder="Bairro">
+					</div>
+					<div class="form-group col-xs-12">
+						<input id="logradouro" type="text" class="form-control" style="color: #999" disabled="" name="logradouro" placeholder="Logradouro">
+					</div>
+					<div class="form-group col-xs-6">
+						<input id="cidade" type="text" class="form-control" style="color: #999" disabled="" name="cidade" placeholder="Cidade">
+					</div>
+					<div class="form-group col-xs-6">
+						<input id="estado" type="text" class="form-control" style="color: #999" disabled="" name="estado" placeholder="Estado">
+					</div>
+					<div class="form-group col-xs-6">
 						<input id="numero" type="text" class="form-control" name="numero" placeholder="Número">
 					</div>
 					<div class="form-group col-xs-12">
@@ -173,6 +185,21 @@
 					}
 				})
 			}
+		});
+		$(document).ready(function() {
+			$("#cep").on('blur', function(ev) {
+				console.log(ev.currentTarget.value);
+
+				$.getJSON({
+					url:"http://api.postmon.com.br/v1/cep/"+ ev.currentTarget.value +"?format=json",
+					success: function(data) {
+						$("#bairro").val(data.bairro);
+						$("#logradouro").val(data.logradouro);
+						$("#cidade").val(data.cidade);
+						$("#estado").val(data.estado_info.nome);
+					}
+				});
+			});
 		});
 	</script>
 
